traversal.snake.Snake.scala.error
Compilation error:
Snake:3: error: Boolean does not take parameters
override def run() {def positionFinale():Boolean= {if (estFaceMur()(&&getDirection()==Direction.EST)) {gauche();return estFaceMur()}
                                                                   ^